<resources>
    <string name="app_name">OpVision</string>
    <string name="title_activity_menu_desplegable">MenuDesplegable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_encuesta">Encuesta</string>
    <string name="menu_tomar_foto">Tomar Foto</string>
    <string name="menu_subir_foto">Subir Foto</string>
    <string name="menu_configuracion">Configuración</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>